...
import dev.simonas.quies.utils.animatePlacement
import dev.simonas.quies.utils.createTestTag
import dev.simonas.quies.utils.vertical
import kotlin.math.sin

internal object CardScreen {
    val TAG_SCREEN = createTestTag("screen")
    val TAG_CLOSE_CARD = createTestTag("close_card")
    val TAG_EXIT = createTestTag("exit")
    val TAG_PREV_QUESTIONS = createTestTag("close_card")
}

private fun closedCardX(index: Int): Dp =
    (-470 - 64 - 4 * sin(index * 1000f) * sin(index * 300f) - 0.5 * index).dp

...
                .offset(
                    x = cardOffsetX(Question.Level.Hard),
                    y = cardOffsetY(Question.Level.Hard),
                )
                .vertical()
                .rotate(cardRotate(Question.Level.Hard)),
            sideText = "LEVEL 3",
            textAlpha = 1f - selectCardAnim,
            onClick = {
                selectedLevel = Question.Level.Hard
            },
        )
        Card(
...
                .offset(
                    x = cardOffsetX(Question.Level.Medium),
                    y = cardOffsetY(Question.Level.Medium),
                )
                .vertical()
                .rotate(cardRotate(Question.Level.Medium)),
            sideText = "LEVEL 2",
            textAlpha = 1f - selectCardAnim,
            onClick = {
                selectedLevel = Question.Level.Medium
            },
        )
        Card(
...
                .offset(
                    x = cardOffsetX(Question.Level.Easy),
                    y = cardOffsetY(Question.Level.Easy),
                )
                .vertical()
                .rotate(cardRotate(Question.Level.Easy)),
            sideText = "LEVEL 1",
            textAlpha = 1f - selectCardAnim,
            onClick = {
                selectedLevel = Question.Level.Easy
            },
        )
    }
...
