...
     * in test suite.
     *
     * Hate wasting time on this at the moment. Might be a stupid mistake. Better just go ahead with
     * the launch.
     */
    @Deprecated("Hack")
    val TAG_MENU = createTestTag("menu_toggle")

    val isShowingMessage = SemanticsPropertyKey<Boolean>("isShowingMessage")
    var SemanticsPropertyReceiver.isShowingMessage by isShowingMessage
}

@OptIn(ExperimentalTextApi::class)
...
